[package]
name = "delharc-bin"
version = "0.1.0"
edition = "2021"
authors = ["Micah Snyder"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
delharc = "0.6.0"
# delharc = { path = "/home/micah/workspace/rust-delharc" }
